--- a/.github/workflows/zap-scan.yaml
+++ b/.github/workflows/zap-scan.yaml
@@ -1,17 +1,17 @@
-name: OWASP ZAP Integration with GitHub Actions
+# name: OWASP ZAP Integration with GitHub Actions
 
-on: [push]
+# on: [push]
 
-jobs:
-  zap_scan:
-    runs-on: ubuntu-latest
-    name: Scan the web application
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          ref: master
-      - name: ZAP Scan
-        uses: zaproxy/action-baseline@v0.14.0
-        with:
-          target: 'https://www.zaproxy.org'
+# jobs:
+#   zap_scan:
+#     runs-on: ubuntu-latest
+#     name: Scan the web application
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v4
+#         with:
+#           ref: master
+#       - name: ZAP Scan
+#         uses: zaproxy/action-baseline@v0.14.0
+#         with:
+#           target: 'https://www.zaproxy.org'
