--- a/.github/workflows/sonarqubescan.yml
+++ b/.github/workflows/sonarqubescan.yml
@@ -1,36 +1,29 @@
-name: Build
+name: Maven Build & SonarQube Analysis
 
-on: [push]
-
+on:
+  push:
+    branches: [ main ]
+  pull_request:
 
 jobs:
-  build:
-    name: Build and analyze
+  sonar:
     runs-on: ubuntu-latest
-    
+
     steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-          java-version: 17
-          distribution: 'zulu' # Alternative distribution options are available.
-      - name: Cache SonarQube packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-      - name: Cache Maven packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-      - name: Build and analyze
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Build & Analyze with SonarQube
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=demo-project -Dsonar.projectName='demo-project'
+        run: |
+          mvn clean verify sonar:sonar \
+            -Dsonar.projectKey=demo-project \
+            -Dsonar.host.url=https://5408430ddf55.ngrok-free.app \
+            -Dsonar.login=$SONAR_TOKEN
